put等body 结构体的声明与使用
