# gen/calc/views/view.go
@@ -1,0 +1,56 @@
+// Code generated by goa v3.18.2, DO NOT EDIT.
+//
+// calc views
+//
+// Command:
+// $ goa gen github.com/cham/elk/design
+
+package views
+
+import (
+	goa "goa.design/goa/v3/pkg"
+)
+
+// Create is the viewed result type that is projected based on a view.
+type Create struct {
+	// Type to project
+	Projected *CreateView
+	// View to render
+	View string
+}
+
+// CreateView is a type that runs validations on a projected type.
+type CreateView struct {
+	// Name of the created resource
+	Name *string
+	// Href of the created resource
+	Href *string
+}
+
+var (
+	// CreateMap is a map indexing the attribute names of Create by view name.
+	CreateMap = map[string][]string{
+		"default": {
+			"name",
+			"href",
+		},
+	}
+)
+
+// ValidateCreate runs the validations defined on the viewed result type Create.
+func ValidateCreate(result *Create) (err error) {
+	switch result.View {
+	case "default", "":
+		err = ValidateCreateView(result.Projected)
+	default:
+		err = goa.InvalidEnumValueError("view", result.View, []any{"default"})
+	}
+	return
+}
+
+// ValidateCreateView runs the validations defined on CreateView using the
+// "default" view.
+func ValidateCreateView(result *CreateView) (err error) {
+
+	return
+}
